# AgentCraft

./: .env copy  .gitignore  README.md  app.py  chat.py  cli.py  gateway.py  get_wecom_users.py  goal_check.py  goal_check.sh  main.py  mcp_config.json  package-lock.json  package.json  pyproject.toml  run_app.py  run_gateway.py  streaming_executor.py  test_acp.py  test_ollama_mlflow.py  test_wecom.py
.agentcraft/: automation.yaml  channels.yaml  hooks.json.example  models.yaml  plugins.yaml  providers.yaml
acp/: __init__.py  control_plane.py  types.py
agentcraft/: __init__.py  compactor.py  demo.py  fork.py  test_compactor.py
automation/: __init__.py  health.py  scheduler.py  store.py  types.py  webhook.py
canvas/: __init__.py  manager.py  server.py
canvas/backends/: __init__.py  memory_backend.py  redis_backend.py
channels/: __init__.py  base.py  cli.py  telegram.py  web.py  wecom.py
core/: __init__.py  concurrency.py  executor.py  llm_queue.py  memory_loader.py  prompt_builder.py  stream_handler.py  tool_loop.py
docs/: acp-guide.md  extension-lifecycle.md  plugin-sdk.md  version-changelog.md  webhook-schema.md  启动教程.md
examples/: csv_analysis.py  interactive_components_demo.py  password_generator.py  sort_visualizer.py
examples/grpc-service/: go.mod
gateway/: __init__.py  version.py
lab-website/: index.html  projects.html  publications.html  research-evolution.html  research-interaction.html  research-office.html  research-skill.html  research-workflow.html  research.html  script.js  source.html  styles.css  team.html
mcp_servers/: sentiment_mcp_server.py
models/: __init__.py  catalog.py
plugins/: __init__.py  base.py
providers/: __init__.py  anthropic.py  auth.py  base.py  deepseek.py  openai.py  registry.py
sample_plugins/telegram/: __init__.py  pyproject.toml.example
sessions/: __init__.py  budget.py  compaction.py  error_recovery.py  fork.py  goal.py  hooks.py  manager.py  memory.py  memory_extractor.py  memory_loader.py  memory_persistence.py  models.py  permission.py  prompt_builder.py  tokens.py  tool_loop.py  vector_memory.py
skills/: __init__.py  loader.py  models.py  pack.py  registry.py
skills/builtin/: canvas-interactive.json  cat-girl.json  code-expert.json  file-manager.json  finance-manager.json  pptx-generator.json
slides/: compile-memgen.js  compile.js  slide-01.js  slide-02.js  slide-03.js  slide-04.js  slide-05.js  slide-06.js  slide-07.js  slide-08.js  slide-09.js  slide-10.js  slide-11.js
slides/output/: presentation.pptx  slide-01-preview.pptx
static/: architecture.html  canvas.html  chat.html
tests/: conftest.py  test_agent_executor.py  test_budget_unit.py  test_compaction.py  test_error_recovery_unit.py  test_fork.py  test_fork_unit.py  test_gateway.py  test_goal_unit.py  test_hooks_unit.py  test_mcp.py  test_memory.py  test_permission_unit.py  test_phase7_integration.py  test_registry.py  test_sandbox.py  test_session_manager_db.py  test_sessions.py  test_skills.py  test_tools.py  test_vector_memory.py  test_web_search.py  test_workflow.py
tools/: __init__.py  agent_executor.py  agent_tools.py  builtin.py  canvas_tools.py  memory_tools.py  pptx_tools.py  search_tools.py  skill_tools.py  token_tools.py  utility_tools.py
utils/: qrcode_display.py
workflows/: __init__.py  models.py
(+102 files in other folders)
