[project]
name = "ollama-mlflow-demo"
version = "0.1.0"
description = "AgentCraft - AI Agent with LLM and tools"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.10.0",  # Cron scheduling
    "ddgs>=9.14.2",
    "duckduckgo-search>=8.1.1",
    "mlflow>=3.12.0",
    "openai>=2.34.0",
    "python-dotenv>=1.0.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0",
    "redis>=5.0.0",  # Async Redis client for Canvas pub/sub (multi-worker support)
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "sentence-transformers>=3.0.0",  # 本地 embedding 模型
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that require a running LLM (Ollama) and valid API key",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]